Complelted final model

--- a/housing_new.ipynb
+++ b/housing_new.ipynb
@@ -1199,7 +1199,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.compose._column_transformer.make_column_selector at 0x2a80d12e590>"
+       "<sklearn.compose._column_transformer.make_column_selector at 0x1f80b843f10>"
       ]
      },
      "execution_count": 24,
@@ -1598,11 +1598,11 @@
       "[101328. 197072. 285008. ... 241328. 315520.  32400.]\n",
       "[211584. 282720. 179760. ... 367152.  82432. 266624.]\n",
       "[ 47500. 100000. 285800. ... 289300. 484600.  69400.]\n",
-      "[154900. 227300. 133400. ... 490800.  72500. 213200.]\n",
+      "[160200. 230800. 139200. ... 500001.  72500. 209200.]\n",
       "[ 63340. 142880. 304120. ... 238100. 408120.  62060.]\n",
       "[134220.  235600.  130600.  ... 474480.8  79820.  253300. ]\n",
-      "[ 57643.   113300.   289083.   ... 300702.03 431140.02  66392.  ]\n",
-      "[133403.   258081.   134662.   ... 469212.6   84126.   264438.01]\n"
+      "[ 56287.   112027.   290572.   ... 291497.01 452866.04  66735.  ]\n",
+      "[136188.   257603.   135733.   ... 462515.67  74102.   253141.  ]\n"
      ]
     }
    ],
@@ -1651,10 +1651,10 @@
       "4. Mean Square Error : 0.000\n",
       "*********************************************\n",
       "Model Performance for Testing Data Set----\n",
-      "1. Mean absolute Error: 45133.650\n",
-      "2. Root Mean Square Error: 71358.178\n",
-      "3. R2 Square : 0.618\n",
-      "4. Mean Square Error : 5091989637.833\n",
+      "1. Mean absolute Error: 45233.990\n",
+      "2. Root Mean Square Error: 71577.482\n",
+      "3. R2 Square : 0.616\n",
+      "4. Mean Square Error : 5123335879.920\n",
       "\n",
       "\n",
       "\n",
@@ -1675,16 +1675,16 @@
       "\n",
       "RandomForest Regressor\n",
       "Model Performance for Training Data Set----\n",
-      "1. Mean absolute Error: 12143.608\n",
-      "2. Root Mean Square Error: 18767.472\n",
+      "1. Mean absolute Error: 12117.462\n",
+      "2. Root Mean Square Error: 18696.309\n",
       "3. R2 Square : 0.974\n",
-      "4. Mean Square Error : 352217992.056\n",
+      "4. Mean Square Error : 349551987.700\n",
       "*********************************************\n",
       "Model Performance for Testing Data Set----\n",
-      "1. Mean absolute Error: 32929.952\n",
-      "2. Root Mean Square Error: 50973.918\n",
-      "3. R2 Square : 0.805\n",
-      "4. Mean Square Error : 2598340299.555\n",
+      "1. Mean absolute Error: 32953.370\n",
+      "2. Root Mean Square Error: 51061.618\n",
+      "3. R2 Square : 0.804\n",
+      "4. Mean Square Error : 2607288825.883\n",
       "\n",
       "\n",
       "\n"
@@ -1732,8 +1732,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "6132e5af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rforest = RandomForestRegressor(n_estimators=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e1dd63b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_model = rforest.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0319912b",
+   "metadata": {},
+   "source": [
+    "## Save the final Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4290721e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6cb613d",
    "metadata": {},
    "outputs": [],
    "source": []
