Final project and finish

--- a/housing_new.ipynb
+++ b/housing_new.ipynb
@@ -1199,7 +1199,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.compose._column_transformer.make_column_selector at 0x1f80b843f10>"
+       "<sklearn.compose._column_transformer.make_column_selector at 0x26fffae3310>"
       ]
      },
      "execution_count": 24,
@@ -1598,11 +1598,11 @@
       "[101328. 197072. 285008. ... 241328. 315520.  32400.]\n",
       "[211584. 282720. 179760. ... 367152.  82432. 266624.]\n",
       "[ 47500. 100000. 285800. ... 289300. 484600.  69400.]\n",
-      "[160200. 230800. 139200. ... 500001.  72500. 209200.]\n",
+      "[160200. 227300. 137500. ... 500001.  43800. 336400.]\n",
       "[ 63340. 142880. 304120. ... 238100. 408120.  62060.]\n",
       "[134220.  235600.  130600.  ... 474480.8  79820.  253300. ]\n",
-      "[ 56287.   112027.   290572.   ... 291497.01 452866.04  66735.  ]\n",
-      "[136188.   257603.   135733.   ... 462515.67  74102.   253141.  ]\n"
+      "[ 55601.   109051.   286996.   ... 295815.03 444172.03  65731.  ]\n",
+      "[135102.   257050.   135200.   ... 474761.6   83886.   254321.01]\n"
      ]
     }
    ],
@@ -1651,10 +1651,10 @@
       "4. Mean Square Error : 0.000\n",
       "*********************************************\n",
       "Model Performance for Testing Data Set----\n",
-      "1. Mean absolute Error: 45233.990\n",
-      "2. Root Mean Square Error: 71577.482\n",
-      "3. R2 Square : 0.616\n",
-      "4. Mean Square Error : 5123335879.920\n",
+      "1. Mean absolute Error: 44890.322\n",
+      "2. Root Mean Square Error: 71280.226\n",
+      "3. R2 Square : 0.619\n",
+      "4. Mean Square Error : 5080870618.585\n",
       "\n",
       "\n",
       "\n",
@@ -1675,16 +1675,16 @@
       "\n",
       "RandomForest Regressor\n",
       "Model Performance for Training Data Set----\n",
-      "1. Mean absolute Error: 12117.462\n",
-      "2. Root Mean Square Error: 18696.309\n",
+      "1. Mean absolute Error: 12167.881\n",
+      "2. Root Mean Square Error: 18707.787\n",
       "3. R2 Square : 0.974\n",
-      "4. Mean Square Error : 349551987.700\n",
+      "4. Mean Square Error : 349981285.496\n",
       "*********************************************\n",
       "Model Performance for Testing Data Set----\n",
-      "1. Mean absolute Error: 32953.370\n",
-      "2. Root Mean Square Error: 51061.618\n",
+      "1. Mean absolute Error: 32821.243\n",
+      "2. Root Mean Square Error: 51075.546\n",
       "3. R2 Square : 0.804\n",
-      "4. Mean Square Error : 2607288825.883\n",
+      "4. Mean Square Error : 2608711391.593\n",
       "\n",
       "\n",
       "\n"
@@ -1766,11 +1766,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "f6cb613d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['CaliforniaHousingModel.pkl']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "joblib.dump(final_model, 'CaliforniaHousingModel.pkl')"
+   ]
   }
  ],
  "metadata": {
